tests/vertical-slice/accept/map_literal_empty_annotated.hew
fn main() -> i64 {
    let m: HashMap<string, i64> = {};
    if m.len() != 0 {
        return 70;
    }
    0
}
