tests/vertical-slice/reject/hashmap_keys_bytes.hew
fn project(values: HashMap<bytes, i64>) {
    let projected = values.keys();
    println(projected.len());
}
